user create function fixed
